# dwhbll

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
.github/workflows/: build.yml
cmake/: dwhbll-reflection-toolchain.cmake  dwhbllConfig.cmake  dwhbllTests.cmake  find_module_exports.py  test_runner.cpp
include/dwhbll/async/: socket.h
include/dwhbll/async/net/: buffered_socket.h  socket.h  tcp_listener.h
include/dwhbll/collections/: cache.h  memory_buffer.h  ring.h  sorted_linked_list.h  streams.hpp
include/dwhbll/concurrency/: common.h  owning_spinlock.h  recycling_concurrent_stack.h  spinlock.h
include/dwhbll/concurrency/backoff/: backoff_policy.h  policy_exponential.h  policy_linear.h  policy_pause.h
include/dwhbll/concurrency/coroutine/: async_semaphore.h  defer_again.h  detached_task.h  reactor.h  sleep_task.h  task.h  uring_promise.h  uring_sqe_awaitable.h
include/dwhbll/concurrency/coroutine/wrappers/: file.h  syscall_wrappers.h
include/dwhbll/concurrency/queues/: bounded_mpsc_queue.h  bounded_spsc_queue.h
include/dwhbll/console/: Logging.h  debug.hpp
include/dwhbll/cryptography/: SHA1.h  banner.h
include/dwhbll/cryptography/arc4/: arc4.h
include/dwhbll/exceptions/: concurrency_exception.h  rt_exception_base.h  sys_error.h  timeout_exception.h
include/dwhbll/files/: parse_utils.h
include/dwhbll/graphics/: pixel.h
include/dwhbll/graphics/bitmap/: bitmap.h  file_header.h  info_header.h
include/dwhbll/linalg/: matrix.h  policy.h
include/dwhbll/math/: pad_box.h  rect.h  vec4.h
include/dwhbll/memory/: pool.h
include/dwhbll/network/: SocketManager.h  address.h  buffered_socket.h  http.h  http_server.hpp
include/dwhbll/network/dns/: dns.h
include/dwhbll/platform/linux_wrappers/: ptrace.h
include/dwhbll/sanify/: all.h  coroutines.hpp  deferred.h  stl_ext.h  types.hpp
include/dwhbll/sanify/sugar/: all.h  ranges.h
include/dwhbll/stl_ext/: common_helpers.h  cow.h  get_set.h  option.h  packs.h  ranges.h  result.h  utilities.h
include/dwhbll/subprocess/: pipe_wrapper.h  process.h
include/dwhbll/utils/: debug.hpp  format.hpp  json.hpp  perf.h  refl.hpp  stacktrace.hpp  string.h  threading.h  utils.hpp  uuid.h
modules/: CMakeLists.txt
modules/dns2/: CMakeLists.txt  dns2.ixx  proto.ixx
modules/http/: CMakeLists.txt  http.ixx
modules/ssl/: CMakeLists.txt  ssl.ixx
src/dwhbll/async/: socket.cpp
src/dwhbll/async/net/: buffered_socket.cpp  socket.cpp  tcp_listener.cpp
src/dwhbll/collections/: cache.cpp  memory_buffer.cpp
src/dwhbll/concurrency/: spinlock.cpp
src/dwhbll/concurrency/coroutine/: async_semaphore.cpp  defer_again.cpp  detached_task.cpp  reactor.cpp  sleep_task.cpp  uring_promise.cpp  uring_sqe_awaitable.cpp
src/dwhbll/concurrency/coroutine/wrappers/: file.cpp  syscall_wrappers.cpp
src/dwhbll/console/: Logging.cpp  debug.cpp
src/dwhbll/cryptography/: SHA1.cpp
src/dwhbll/cryptography/arc4/: arc4.cpp
src/dwhbll/exceptions/: rt_exception_base.cpp
src/dwhbll/files/: parse_utils.cpp
src/dwhbll/graphics/: bitmap.cpp
src/dwhbll/linalg/: kernel.hip
src/dwhbll/math/: vec4.cpp
src/dwhbll/network/: SocketManager.cpp  address.cpp  buffered_socket.cpp  http.cpp
src/dwhbll/network/console/: Logging.cpp
src/dwhbll/network/dns/: dns.cpp
src/dwhbll/platform/linux_wrappers/: ptrace.cpp
src/dwhbll/sanify/: deferred.cpp
src/dwhbll/subprocess/: pipe_wrapper.cpp  process.cpp
src/dwhbll/utils/: debug.cpp  json.cpp  perf.cpp  string.cpp  threading.cpp  utils.cpp  uuid.cpp
tests/: http_server_test.cpp  matrix.cpp  meson.build  pool.cpp  test_main.cpp
tests/bench/: bounded_mpsc_int_bench.cpp  bounded_spsc_int_bench.cpp  recycling_concurrent_stack_bench.cpp
tests/collections/: cache.cpp  ring.cpp  streams.cpp
tests/cryptography/: arc4.cpp
tests/graphics/: bitmap.cpp
